--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,18 @@
+/* Google fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 :root {
-    /*Fonts*/
+ /*---------- FONTS STYLE ----------*/
+ --content-text: 'Montserrat', sans-serif;
   
-  
-    /*Colours*/
+/*---------- COLOURS ----------*/
     --black: #000000;
+    --oxford-blue: #000026;
+    --baby-white: #FDFFFC;
+    --pink: #f45BC9;
+    --crisler-blue: #3B0CCA;
+    --mauve: #BDA5F6;
+    --payne-grey: #637081;
   }
 
 /* Removes margins and padding */
@@ -18,22 +27,130 @@ body {
   height: 100%;
 }
 
-  /* Background image with a background colour to show if the image cannot load*/
+/* Background image with a background colour to show if the image cannot load*/
 body {
-    
-background-color: var(--black);
+  background-color: var(--black);
+  font-family: var(--content-text);
   background: url("../images/background.jpg") no-repeat center center;
   background-size: cover;
-  line-height: 0px;
   text-align: center;
   }
-/* --------- Heading */
 
+/* Logo section */
 .heading {
     text-align: center;
     font-size: 2.5rem;
+    margin-top: 1.5em;
 }
 
 .logo {
     height: 100px;
+    -webkit-filter: drop-shadow(5px 5px 5px var(--crisler-blue));
+    filter: drop-shadow(5px 5px 5px var(--crisler-blue));
 }
+
+/* Headings and text */
+  h2 {
+    font-size: 2rem;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  
+  p {
+    text-align: center;
+    font-size: 1rem;
+    padding: 0.5em 2em;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+
+/* Outer Container */
+#outer-container {
+    background-color: var(--payne-grey);
+    opacity: 0.9;
+    width: 80%;
+    margin: auto;
+    padding: 1rem;
+    color: var(--baby-white);
+    border-radius: 1.5rem;
+  }
+  
+  /* Button Groups */
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  /*---------- BUTTON STYLING ----------*/
+
+.btn {
+    font-family: var(--content-text);
+    font-weight: 500;
+    text-align: center;
+    padding: 0.75rem;
+    background-color: var(--oxford-blue);
+    border-radius: 2rem;
+    color: var(--baby-white);
+    margin: 0.3rem;
+    box-shadow: -2px -2px 5px var(--baby-white) inset;
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎮</text></svg>") 16 0,auto; /*!emojicursor.app*/
+    font-size: 1.5rem;
+    margin: 0.5rem;
+  }
+
+  .btn:hover {
+    background-color: var(--baby-white);
+    color: var(--black);
+    box-shadow: -2px -2px 5px var(--black) inset;
+  }
+  
+  .btn[disabled]:hover {
+    cursor: not-allowed;
+  }
+  /*---------- MODAL ----------*/
+/* tutorial - https://www.youtube.com/watch?v=XH5OW46yO8I*/
+
+/* Flex container*/
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-content: center;
+  }
+
+#modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--mauve);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s ease;
+  }
+
+
+/* Style content */
+#modal-content {
+    width: 80%;
+    border: red 5px solid;
+    border-radius: 1.5rem;
+    padding: 2rem;
+    color: white;
+    text-align: center;
+  }
+  
+  /* margin to top of close modal button */
+  #close-modal {
+    margin-top: 3rem;
+  }
