--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ body {
   }
   
   /* Button Groups */
-  .buttons {
+  .buttons-container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -120,15 +120,39 @@ body {
     margin: 0.5rem;
   }
 
-  .btn:hover {
-    background-color: var(--baby-white);
+  .hover-button:hover{
+    background-color: var(--mauve);
     color: var(--black);
-    box-shadow: -2px -2px 5px var(--black) inset;
+  }
+
+  .choice-container:hover{
+   background-color: var(--mauve);
+   color: var(--black);
+   font-weight: bold;
   }
   
   .btn[disabled]:hover {
     cursor: not-allowed;
   }
+
+/* for buttons A, B, C, D*/
+.choice-container {
+    display: flex;
+}
+.choice-prefix{
+background-color: var(--baby-white); 
+opacity: 0.7;
+color: var(--oxford-blue);
+font-weight: bold;
+border-radius: 2em 0em 0em 2em;
+margin: -0.75em;
+padding-top: 1.3em;
+  }
+
+/*.choice-text {
+  
+}*/
+
 /*---------- MODALS ----------*/
 /* tutorial - https://www.youtube.com/watch?v=XH5OW46yO8I*/
 
