--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,6 @@ Flex container*/
 /*---------- BUTTON STYLING ----------*/
 .btn {
   font-family: var(--content-text);
-  font-weight: 500;
   text-align: center;
   padding: 0.75rem;
   background-color: var(--oxford-blue);
@@ -414,8 +413,17 @@ input::placeholder {
 }
 
 @media screen and (max-width: 765px) {
+  .outer-container {
+    width: 75%;
+  }
+
+  .intro-text {
+    padding: 0em 2em;
+  }
+
   .intro-text>h2 {
-    font-size: 1.2em;
+    font-size: 1.4em;
+    line-height: 1.5em;
   }
 
   #highScores {
@@ -429,27 +437,37 @@ input::placeholder {
   }
 
   .outer-container {
-    width: 95%
+    width: 70%
   }
 
   .intro-text>p {
     padding: .8em 0em 1em;
     line-height: 160%;
   }
+
+  .btn {
+    font-size: 1rem;
+  }
 }
 
 
 /* Medium-small screens */
 @media screen and (max-width: 550px) {
-    .main-background {
+  .main-background {
     background: var(--oxford-blue);
-    }
+  }
+
   .logo {
     height: 1.7em;
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+  }
+
+  .intro-text>h2 {
+    font-size: 1.2em;
+    line-height: 1.em;
   }
 
   .intro-text {
@@ -467,7 +485,7 @@ input::placeholder {
   }
 
   .outer-container {
-    width: 85%;
+    width: 65%;
   }
 
   .btn-width {
