Refactor getHighScores() function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,7 @@ input::placeholder {
   color: #ffffff;
 }
 
-#highScoresList {
+#high-score-list {
   list-style: none;
   padding-left: 0;
   margin-bottom: 4rem;
